update tables content; migrate table components to markdown tables

--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -9,52 +9,16 @@ The `OrganizationInvitation` object is the model around an organization invitati
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {cells: [
-        <code>id</code>,
-        <code>string</code>,
-        "A unique identifier for this organization membership.",
-        ]},
-        {cells: [
-        <code>emailAddress</code>,
-        <code>string</code>,
-        "The email address the invitation has been sent.",
-        ]},
-        {cells: [
-        <code>organizationId</code>,
-        <code>string</code>,
-        "The organization ID of the organization this invitation is for.",
-        ]},
-        {cells: [
-        <code>publicMetadata</code>,
-        <code>object</code>,
-        "The public metadata of the organization membership.",
-        ]},
-        {cells: [
-        <code>role</code>,
-        <code>'admin' | 'basic_member' | 'guest_member'</code>,
-        "The role of the current user in the organization.",
-        ]},
-        {cells: [
-        <code>status</code>,
-        <code>'pending' | 'accepted' | 'revoked'</code>,
-        "The status of the invitation.",
-        ]},
-        {cells: [
-        <code>createdAt</code>,
-        <code>Date</code>,
-        "Date of the time the membership was created.",
-        ]},
-        {cells: [
-        <code>updatedAt</code>,
-        <code>Date</code>,
-        "Date of the last time the membership was updated.",
-        ]},
-    ]}
-/>
+| Name | Type | Description |
+|  --- | --- | --- |
+| `id` | `string` | A unique identifier for this organization membership. |
+| `emailAddress` | `string` | The email address the invitation has been sent. |
+| `organizationId` | `string` | The organization ID of the organization this invitation is for. |
+| `publicMetadata` | `object` | The public metadata of the organization membership. |
+| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the current user in the organization. |
+| `status` | `'pending' \| 'accepted' \| 'revoked'` | The status of the invitation. |
+| `createdAt` | `Date` | Date of the time the membership was created. |
+| `updatedAt` | `Date` | Date of the last time the membership was updated. |
 
 ## Methods
 
@@ -68,13 +32,6 @@ Revokes the invitation for the email it corresponds to.
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-invitation">OrganizationInvitation</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the <code>OrganizationInvitation</code> for the revolked invitation.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<OrganizationInvitation>` | This method returns a `Promise` which resolves to the `OrganizationInvitation` for the revolked invitation. |
