--- a/docs/references/javascript/organization-membership.mdx
+++ b/docs/references/javascript/organization-membership.mdx
@@ -9,47 +9,15 @@ The `OrganizationMembership` object is the model around an organization membersh
 
 ## Attributes
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>id</code>,
-  <code>string</code>,
-  "A unique identifier for this organization membership."
-  ]},
-  {cells: [
-  <code>publicMetadata</code>,
-  <code>object</code>,
-  "Custom metadata that are visible to the frontend."
-  ]},
-  {cells: [
-  <code>role</code>,
-  <code>'admin' | 'basic_member' | 'guest_member'</code>,
-  "The role of the current user in the organization."
-  ]},
-  {cells: [
-  <code>publicUserData</code>,
-  <code><a href="/docs/references/javascript/types/public-user-data">PublicUserData</a></code>,
-  "Public information about the user that this membership belongs to."
-  ]},
-  {cells: [
-  <code>organization</code>,
-  <code><a href="/docs/references/javascript/organization/organization">Organization</a></code>,
-  "The organization object the membership belongs to."
-  ]},
-  {cells: [
-  <code>createdAt</code>,
-  <code>Date</code>,
-  "Date of the time the membership was created."
-  ]},
-  {cells: [
-  <code>updatedAt</code>,
-  <code>Date</code>,
-  "Date of the last time the membership was updated."
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `id` | `string` | A unique identifier for this organization membership. |
+| `publicMetadata` | `object` | Custom metadata that are visible to the frontend. |
+| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the current user in the organization. |
+| `publicUserData` | [`PublicUserData`](/docs/references/javascript/types/public-user-data) | Public information about the user that this membership belongs to. |
+| `organization` | [`Organization`](/docs/references/javascript/organization/organization) | The [`Organization`](/docs/references/javascript/organization/organization) object the membership belongs to. |
+| `createdAt` | `Date` | Date of the time the membership was created. |
+| `updatedAt` | `Date` | Date of the last time the membership was updated. |
 
 ## Methods
 
@@ -63,16 +31,9 @@ Deletes the membership from the organization it belongs to.
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-membership">OrganizationMembership</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the <code>OrganizationMembership</code> for the deleted membership.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<OrganizationMembership>` | This method returns a `Promise` which resolves to the `OrganizationMembership` for the deleted membership. |
 
 ### `update()`
 
@@ -80,29 +41,16 @@ Deletes the membership from the organization it belongs to.
 function update(updateParams: UpdateOrganizationMembershipParams): Promise<OrganizationMembership>;
 ```
 
+Updates the member's role.
+
 #### `UpdateOrganizationMembershipParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>role</code>,
-  <code>'admin' | 'basic_member' | 'guest_member'</code>,
-  "The role of the new member."
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the new member. |
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-membership">OrganizationMembership</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a></code> for the updated membership.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| `Promise<OrganizationMembership>` | This method returns a `Promise` which resolves to the `OrganizationMembership` for the updated membership. |
