--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -37,7 +37,7 @@ Updates an organization's attributes.
 | Name | Type | Description |
 | --- | --- | --- |
 | `name` | `string` | The organization name. |
-| `slug` | `string \| undefined` | The organization slug. |
+| `slug?` | `string \| undefined` | The organization slug. |
 
 #### Returns
 
