--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -146,7 +146,7 @@ It’s going to be free during the Beta period.
 
 **How much will it cost after Beta?**
 
-It will cost $50 per connection for production Instances. Connections in development instances are and will be free, but capped to 5.
+It will cost $50 per active connection per month for production instances. Connections in development instances are and will be free, but capped to 5.
 
 **Can I get a bulk discount?**
 
