add optional operator where necessary

--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -42,7 +42,7 @@ Create an instance of the `Clerk` class with dedicated options.
 | Name | Type | Description |
 | --- | --- | --- |
 | `key` | `string` | The publishable key from your Clerk Dashboard, used to connect to Clerk |
-| `options` | [`DomainOrProxyUrl`](#domain-or-proxy-url) \| `undefined` | The domain or proxy URL used to connect to Clerk |
+| `options?` | [`DomainOrProxyUrl`](#domain-or-proxy-url) \| `undefined` | The domain or proxy URL used to connect to Clerk |
 
 #### `DomainOrProxyUrl`
 
@@ -50,8 +50,8 @@ Only one of the two properties are allowed to be set at a time.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `proxyUrl` | `never \| string \| ((url: URL) => string)` | The proxyUrl used to connect to Clerk. If a function, will be called with a `URL` made from `window.location.href` |
-| `domain` | `never \| string \| ((url: URL) => string)` | The domain used to connect to Clerk. If a function, will be called with a `URL` made from `window.location.href` |
+| `proxyUrl?` | `never \| string \| ((url: URL) => string)` | The proxyUrl used to connect to Clerk. If a function, will be called with a `URL` made from `window.location.href` |
+| `domain?` | `never \| string \| ((url: URL) => string)` | The domain used to connect to Clerk. If a function, will be called with a `URL` made from `window.location.href` |
 
 ### `isReady()`
 
@@ -80,6 +80,8 @@ It is absolutely necessary to call this method before using the `Clerk` object i
 
 #### `ClerkOptions`
 
+All props below are optional.
+
 | Name | Type | Description |
 | --- | --- | --- |
 | `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
@@ -106,13 +108,13 @@ function signOut(options?: SignOutOptions): Promise<void>;
 function signOut(signOutCallback?: (() => void | Promise<any>), options?: SignOutOptions): Promise<void>;
 ```
 
-Signs out the active user from all sessions in a [multi-session application](/docs/custom-flows/multi-session-applications), or simply the current session in a single-session context. The current client will be deleted.
+Signs out the active user from all sessions in a [multi-session application](/docs/custom-flows/multi-session-applications), or simply the current session in a single-session context. The current client will be deleted. You can also specify a specific session to sign out by passing the `sessionId` parameter.
 
 #### `SignOutOptions`
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `sessionId` | `string \| undefined` | Specify a specific session to sign out. Useful for multi-session applications. |
+| `sessionId?` | `string \| undefined` | Specify a specific session to sign out. Useful for multi-session applications. |
 
 ### `addListener()`
 
@@ -162,9 +164,9 @@ function authenticateWithMetamask({
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `redirectUrl` | `string \| undefined` | Full URL or path to navigate after successful sign in or sign up. |
-| `signUpContinueUrl` | `string \| undefined` | The location to continue navigation to in the sign up process if data is missing. |
-| `customNavigate` | `((to: string) => Promise<unknown> \| unknown) \| undefined` | Allows you to define a custom navigation function |
+| `redirectUrl?` | `string \| undefined` | Full URL or path to navigate after successful sign in or sign up. |
+| `signUpContinueUrl?` | `string \| undefined` | The location to continue navigation to in the sign up process if data is missing. |
+| `customNavigate?` | `((to: string) => Promise<unknown> \| unknown) \| undefined` | Allows you to define a custom navigation function |
 
 ## Components
 
