--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -40,16 +40,16 @@ Take a look at the function parameters description below for more usage details.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `params` | [`HandleMagicLinkVerificationParams`](#handlemagiclinkverificationparams) | Allows you to define the URLs where the user should be redirected to on successful verification and: <ul><li>Completed sign in or sign up attempt.</li><li>Pending sign in or sign up attempt.</li></ul><br />If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
-| `customNavigate` | `(to: string) => Promise<unknown>` | Allows you to define a custom navigation function. |
+| `params` | [`HandleMagicLinkVerificationParams`](#handle-magic-link-verification-params) | Allows you to define the URLs where the user should be redirected to on successful verification and: <ul><li>Completed sign in or sign up attempt.</li><li>Pending sign in or sign up attempt.</li></ul><br />If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
+| `customNavigate?` | `(to: string) => Promise<unknown>` | Allows you to define a custom navigation function. |
 
 ### `HandleMagicLinkVerificationParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `redirectUrlComplete` | `string \| undefined` | Full URL or path to navigate after successful magic link verification on completed sign up or sign in on the same device. |
-| `redirectUrl` | `string \| undefined` | Full URL or path to navigate after successful magic link verification on the same device, but not completed sign in or sign up. |
-| `onVerifiedOnOtherDevice` | `() => void` | Callback function to be executed after successful magic link verification on another device. |
+| `redirectUrlComplete?` | `string \| undefined` | Full URL or path to navigate after successful magic link verification on completed sign up or sign in on the same device. |
+| `redirectUrl?` | `string \| undefined` | Full URL or path to navigate after successful magic link verification on the same device, but not completed sign in or sign up. |
+| `onVerifiedOnOtherDevice?` | `() => void` | Callback function to be executed after successful magic link verification on another device. |
 
 ### Returns
 
@@ -61,7 +61,7 @@ Take a look at the function parameters description below for more usage details.
 
 ```typescript
 function handleRedirectCallback(
-    params?: HandleOAuthCallbackParams,
+    params: HandleOAuthCallbackParams,
     customNavigate?: ((to: string) => Promise<unknown>) | undefined
 ): Promise<unknown>;
 ```
@@ -82,8 +82,12 @@ Completes a custom OAuth flow started by calling either [`SignIn.authenticateWit
 | `afterSignUpUrl` | `string \| undefined \| null` | Full URL or path to navigate after successful sign up. |
 | `afterSignInUrl` | `string \| undefined \| null` | Full URL or path to navigate after successful sign in. |
 | `redirectUrl` | `string \| undefined \| null` | Full URL or path to navigate after successful sign in or sign up. <br />The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `firstFactorUrl` | `string \| undefined` | Full URL or path to navigate during sign in, if identifier verification is required. |
 | `secondFactorUrl` | `string \| undefined` | Full URL or path to navigate during sign in, if 2FA is enabled. |
+| `resetPasswordUrl` | `string` | Full URL or path to navigate during sign in, if the user is required to reset their password. |
 | `continueSignUpUrl` | `string \| undefined \| null` | Full URL or path to navigate after an incomplete sign up. |
+| `verifyEmailAddressUrl` | `string \| undefined \| null` | Full URL or path to navigate after requesting email verification. |
+| `verifyPhoneNumberUrl` | `string \| undefined \| null` | Full URL or path to navigate after requesting phone verification. |
 
 ## `handleUnauthenticated()`
 
@@ -91,4 +95,4 @@ Completes a custom OAuth flow started by calling either [`SignIn.authenticateWit
 function handleUnauthenticated(opts?: { broadcast: boolean }): Promise<unknown>;
 ```
 
-Handles a 401 response from Frontend API by refreshing the client and session object accordingly
+Handles a 401 response from Frontend API by refreshing the client and session object accordingly.
