--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -26,7 +26,7 @@ The `getOrganization` method is used to get the information of an organization p
 
 | Type | Description |
 | --- | --- |
-| `Promise<Organization \| undefined>` | This method returns a `Promise` which resolves to the requested [`Organization`](/docs/references/javascript/organization/organization). |
+| <code>Promise\<[Organization][org-ref] \| undefined\></code> | This method returns a `Promise` which resolves to the requested [`Organization`][org-ref]. |
 
 ## `createOrganization()`
 
@@ -47,7 +47,7 @@ The `createOrganization` method is used to create an organization programaticall
 
 | Type | Description |
 | --- | --- |
-| `Promise<Organization>` | This method returns a `Promise` which resolves to the newly created [`Organization`](/docs/references/javascript/organization/organization). |
+| <code>Promise\<[Organization][org-ref\></code> | This method returns a `Promise` which resolves to the newly created [`Organization`][org-ref]. |
 
 ## `getOrganizationMemberships()`
 
@@ -55,11 +55,14 @@ The `createOrganization` method is used to create an organization programaticall
 function getOrganizationMemberships(): Promise<OrganizationMembership[]>;
 ```
 
-Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`](/docs/references/javascript/organization-membership)s.
+Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`][orgmem-ref]s.
 
 
 ### Returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<OrganizationMembership[]>` | This method returns a `Promise` which resolves to the list of [`OrganizationMembership`](/docs/references/javascript/organization-membership)s for the current user. |
+| <code>Promise\<[OrganizationMembership][orgmem-ref][]\></code> | This method returns a `Promise` which resolves to the list of [`OrganizationMembership`][orgmem-ref]s for the current user. |
+
+[org-ref]: /docs/references/javascript/organization/organization
+[orgmem-ref]: /docs/references/javascript/organization-membership
