--- a/docs/references/javascript/clerk/redirect-methods.mdx
+++ b/docs/references/javascript/clerk/redirect-methods.mdx
@@ -19,7 +19,7 @@ Helper method which will use the custom push navigation function of your applica
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `to` | `string \| undefined` | The route to navigate to |
+| `to` | `string \| undefined` | The route to navigate to. |
 
 ### Returns
 
@@ -61,7 +61,7 @@ Redirects to the sign-in URL, as configured in your application's instance setti
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `options` | [`SignInRedirectOptions`](/docs/references/javascript/types/sign-in-redirect-options) \| `undefined` | Options to use in the redirect |
+| `options?` | [`SignInRedirectOptions`](/docs/references/javascript/types/sign-in-redirect-options) \| `undefined` | Options to use in the redirect |
 
 ### Returns
 
@@ -81,7 +81,7 @@ Redirects to the sign-up URL, as configured in your application's instance setti
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `options` | [`SignUpRedirectOptions`](/docs/references/javascript/types/sign-up-redirect-options) \| `undefined` | Options to use in the redirect |
+| `options?` | [`SignUpRedirectOptions`](/docs/references/javascript/types/sign-up-redirect-options) \| `undefined` | Options to use in the redirect |
 
 ### Returns
 
