--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -7,7 +7,7 @@ description: These are all methods on the Clerk class that help you manage the a
 
 These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage the active session and/or organization.
 
-## `setSession()`
+## `setSession()` (deprecated)
 
 ```typescript
 function setSession(
@@ -15,6 +15,8 @@ function setSession(
     beforeEmit?: BeforeEmitCallback
 ): Promise<void>;
 ```
+
+Deprecated in favor of [`setActive()`](#set-active).
 
 Set the current session on this client to the provided session. The provided session can be either a complete [`Session`][session-ref] object or simply its unique identifier.
 
@@ -50,9 +52,7 @@ function setActive({
 }: SetActiveParams): Promise<void>;
 ```
 
-An experimental method used to set the active session and/or organization.
-
-> This method will eventually replace `setSession`.
+A method used to set the active session and/or organization.
 
 ### `SetActiveParams`
 
