--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -78,8 +78,8 @@ Adds an external account for the user. A new [`ExternalAccount`][exacc-ref] will
 | Name | Type | Description |
 | --- | --- | --- |
 | `strategy` | [`OAuthStrategy`](/docs/references/javascript/types/oauth-strategy) | The strategy corresponding to the oauth provider, e.g. `oauth_facebook`, `oauth_github`, etc |
-| `redirectUrl` | `string` | The URL to redirect back to one the oauth flow has completed successfully or unsuccessfully. |
-| `additionalScopes` | `string[]` | Any additional scopes you would like your user to be prompted to approve. |
+| `redirectUrl?` | `string` | The URL to redirect back to one the oauth flow has completed successfully or unsuccessfully. |
+| `additionalScopes?` | `string[]` | Any additional scopes you would like your user to be prompted to approve. |
 
 ### Returns
 
