--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -19,8 +19,8 @@ Updates the user's password.
 | Name | Type | Description |
 | --- | --- | --- |
 | `newPassword` | `string` | The user's new password. |
-| `currentPassword` | `string` | The user's current password. |
-| `signOutOfOtherSessions` | `boolean \| undefined` | If set to `true`, all sessions will be signed out. |
+| `currentPassword?` | `string` | The user's current password. |
+| `signOutOfOtherSessions?` | `boolean \| undefined` | If set to `true`, all sessions will be signed out. |
 
 ## `removePassword()`
 
